node-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: node-svc
  namespace: kube-system
spec:
  type: NodePort
  selector:
    app: sample-node
  ports:
    - name: webport
      port: 80
      targetPort: 3005
      nodePort: 32333
