node-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-ingress
  namespace: ingress-nginx
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: ingress-nginx-controller
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/subnets: subnet-012152cdad677b53d, subnet-02fd7c33879b66443
spec:
  ingressClassName: nginx
  rules:
  - host:
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: node-svc
            port:
             number: 80
